--- a/espoir/index.html
+++ b/espoir/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main.js" ></script>
   <link rel="stylesheet" href="css/import.css">
   <title>espoir</title>
 </head>
@@ -16,11 +16,11 @@
 
 
   <nav>
-        <div>
+    <div>
       <h1>eSpoir</h1>
       <img src="image/header-logo.png" alt="">
     </div>
-
+    <div class="nav">
         <ul class="nav-icon">
               <li>
                   <a href="#" stlye="background-image:url('image/nav/search.png')">검색</a>
@@ -139,6 +139,21 @@
             <li>
               <a href="#">SHOP</a>
               <div>
+                  <figure>
+                    <a href="#none">
+                      <img src="image/nav/shop.jpg" alt="">
+                    </a>
+                  </figure>
+
+                  <ul>
+                    <li>베스트 셀러</li>
+                    <li>신제품</li>
+                    <li>트라이 미 박스</li>
+                    <li>터치 업 투고</li>
+                    <li>라스트 찬스</li>
+                    <li>아이 믹스 앤 매치</li>
+                  </ul>
+
                   <ul>
                     <li>PRODUCT</li>
                     <li>립<i></i></li>
@@ -152,24 +167,16 @@
                     <li>스페셜세트<i></i></li>
                   </ul>
 
-                  <ul>
-                    <li>베스트 셀러</li>
-                    <li>신제품</li>
-                    <li>트라이 미 박스</li>
-                    <li>터치 업 투고</li>
-                    <li>라스트 찬스</li>
-                    <li>아이 믹스 앤 매치</li>
-                  </ul>
-
-                  <figure>
-                    <a href="#"></a>
-                  </figure>
-
               </div>
             </li>
             <li>
               <a href="#">PRO TIP</a>
               <div>
+                  <figure>
+                    <a href="#none">
+                      <img src="image/nav/event.jpg" alt="">
+                    </a>
+                  </figure>
                   <ul>
                     <li>FINDING<br />SYSTEM
                        <div>당신을 위한 <br />최적의 차운데이션,컬러,<br />브러쉬를 찾아보세요.</div>
@@ -186,14 +193,17 @@
                     <li>프로 S.O.S</li>
                     <li>아티스트 톡</li>
                   </ul>
-                  <figure>
-                    <a href="#"></a>
-                  </figure>
               </div>
             </li>
             <li>
               <a href="#">EVENT</a>
               <div>
+
+                <figure>
+                  <a href="#none">
+                    <img src="image/nav/shop.jpg" alt="">
+                  </a>
+                </figure>
                   <ul>
                     <li>EVENT
                        <div>지금 진행중인 다양한 이벤트를<br />바로 확인해보세요</div>
@@ -210,15 +220,19 @@
                     <li>뷰티테스터 신청하기</li>
                     <li>이달의 멤버십 혜택</li>
                   </ul>
-                  <figure>
-                    <a href="#"></a>
-                  </figure>
 
               </div>
             </li>
             <li>
               <a href="#">SERVICE</a>
               <div>
+
+                  <figure>
+                    <a href="#">
+                      <img src="image/nav/event.jpg" alt="">
+                    </a>
+                  </figure>
+
                   <ul>
                     <li>ESPOIR<br />MEMBERSHIP
                        <div>다양한 혜택을 누릴 수 있는<br />에스쁘아만의 멤버십 서비스를<br />소개합니다.</div>
@@ -233,15 +247,18 @@
                     <li>아이브로우바</li>
                     <li>메이크업 레슨</li>
                   </ul>
-                  <figure>
-                    <a href="#"></a>
-                  </figure>
 
               </div>
             </li>
             <li>
               <a href="#">REVIEW</a>
               <div>
+
+                  <figure>
+                    <a href="#">
+                      <img src="image/nav/event.jpg" alt="">
+                    </a>
+                  </figure>
                   <ul>
                     <li>SOCIAL REVIEW
                        <div>SNS에서 화제가 되고 있는<br />에스쁘아 아이템 후기를<br />지금 바로 확인해보세요.</div>
@@ -254,15 +271,16 @@
                     </li>
                     <li>리뷰 라이브 보드</li>
                   </ul>
-                  <figure>
-                    <a href="#"></a>
-                  </figure>
 
               </div>
             </li>
             <li>
               <a href="#">BRAND</a>
               <div>
+
+                  <figure>
+                    <a href="#"><img src="image/nav/event.jpg" alt=""></a>
+                  </figure>
                   <ul>
                     <li>POWER OF<br />TRANSFORMATION
                        <div>아시아 프로페셔널 메이크업 브랜드<br />에스쁘아의 이야기를 만나보세</div>
@@ -280,14 +298,11 @@
                     <li>뉴스</li>
                     <li>소셜 에스쁘아</li>
                   </ul>
-                  <figure>
-                    <a href="#"></a>
-                  </figure>
 
               </div>
             </li>
         </ul>
-
+    </div>
 
    </nav>
   <!-- nav&section slide -->
@@ -579,35 +594,41 @@
         <div class="algrid-right-s">
 
           <div class="algrid-right-s-btn">
-            <a href="#"> > </a>
-            <a href="#"> < </a>
+            <a href="#none"><img src="image/main/next.png" alt=""></a>
+            <a href="#none"><img src="image/main/prev.png" alt=""></a>
           </div>
-          <ul>
-            <li>
-              <a href="">
-                <img src="" alt="">
-                <span></span>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img src="" alt="">
-                <span></span>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img src="" alt="">
-                <span></span>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img src="" alt="">
-                <span></span>
-              </a>
-            </li>
-          </ul>
+          <div class="algrid-right-s-view">
+            <ul>
+              <li>
+                <a href="">
+                  <img src="image/main/every-1.jpg" alt="">
+                  <strong>봄에 쓰기 좋은 파운데이션</strong>
+                  <span>Day Day</span>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="image/main/every-2.jpg" alt="">
+                  <strong>봄에 쓰기 좋은 파운데이션</strong>
+                  <span>Welcome To My Zone</span>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="image/main/every-3.jpg" alt="">
+                  <strong>봄에 쓰기 좋은 파운데이션</strong>
+                  <span>Day Day</span>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="image/main/every-4.jpg" alt="">
+                  <strong>봄에 쓰기 좋은 파운데이션</strong>
+                  <span>One for the</span>
+                </a>
+              </li>
+            </ul>
+          </div>
 
         </div>
         <div class="algrid-right-m">
@@ -622,7 +643,9 @@
           </div>
 
           <div class="algrid-right-m-video">
-
+            <video src="image/main/eliphan.mp4" autoplay loop muted >
+              <source src="image/main/eliphan.mp4" type="video/">
+            </video>
           </div>
 
         </div>
