--- a/lgchamical/index.html
+++ b/lgchamical/index.html
@@ -35,6 +35,158 @@
 
     <nav class="fr pr">
        <a href="#">전체메뉴 <img src="image/nav-menu.png" alt="전체메뉴 보기"></a>
+       <div class="menu-wrapper">
+
+         <div>
+            <a href="#none"><img src="image/close.png" alt=""></a>
+            <div>
+              <cite><img src="image/hover-company-sub.png" alt="">company</cite>
+              <div>
+                <dl>
+                  <dt>기업정보</dt>
+                  <dd>
+                    <a href="#none">개요</a>
+                  </dd>
+                  <dd>
+                    <a href="#none">LG Way</a>
+                  </dd>
+                  <dd>
+                    <a href="#none">비전</a>
+                  </dd>
+                  <dd>
+                    <a href="#none">연혁</a>
+                  </dd>
+                  <dd>
+                    <a href="#none">CI</a>
+                  </dd>
+                </dl>
+                <dl>
+                  <dt>CEO</dt>
+                  <dd><a href="#none">CEO</a></dd>
+                </dl>
+                <dl>
+                  <dt>R&D</dt>
+                  <dd><a href="#none">R&D 현황</a></dd>
+                  <dd><a href="#none">R&D 분야</a></dd>
+                  <dd><a href="#none">R&D 실적</a></dd>
+                </dl>
+                <dl>
+                  <dt>사업장 소개</dt>
+                  <dd><a href="#none">국내 사업장</a></dd>
+                  <dd><a href="#none">해외 사업장</a></dd>
+                </dl>
+                <dl>
+                  <dt>홍보센터</dt>
+                  <dd><a href="#none">뉴스룸</a></dd>
+                  <dd><a href="#none">광고</a></dd>
+                  <dd><a href="#none">생활 속의 LG화학</a></dd>
+                </dl>
+                <dl>
+                  <dt>투자정보</dt>
+                  <dd><a href="#none">경영정보</a></dd>
+                  <dd><a href="#none">주식정보</a></dd>
+                  <dd><a href="#none">재무정보</a></dd>
+                  <dd><a href="#none">공시정보</a></dd>
+                  <dd><a href="#none">IR활동</a></dd>
+                  <dd><a href="#none">IR자료실</a></dd>
+                </dl>
+                <dl>
+                <dt>지속가능 경영</dt>
+                <dd><a href="#none">지속가능경영 소개</a></dd>
+                <dd><a href="#none">정도경영</a></dd>
+                <dd><a href="#none">준법경영</a></dd>
+                <dd><a href="#none">동반성장</a></dd>
+                <dd><a href="#none">사회공헌</a></dd>
+              </dl>
+              </div>
+            </div>
+            <div>
+              <cite><img src="image/hover-product-sub.png" alt="">product</cite>
+              <div>
+                <dl>
+                <dt>기초소재</dt>
+                <dd>NCC</dd>
+                <dd>PO</dd>
+                <dd>PVC/가소제</dd>
+                <dd>ABS</dd>
+                <dd>EP</dd>
+                <dd>아크릴/SAP</dd>
+                <dd>고무/특수수지</dd>
+              </dl>
+                <dl>
+                  <dt>전지</dt>
+                  <dd>소형전지</dd>
+                  <dd>자동차전지</dd>
+                  <dd>ESS 전지</dd>
+                </dl>
+                <dl>
+                  <dt>정보전자소재</dt>
+                  <dd>광학소재</dd>
+                  <dd>고기능성소재</dd>
+                  <dd>유리기판</dd>
+                  <dd>RO필터</dd>
+                </dl>
+                <dl>
+                  <dt>재료</dt>
+                  <dd>디스플레이재료</dd>
+                  <dd>전지재료</dd>
+                </dl>
+                <dl>
+                <dt>생명과학</dt>
+                <dd>의약</dd>
+                <dd>백신</dd>
+                <dd>파인케미칼</dd>
+              </dl>
+              </div>
+            </div>
+            <div>
+              <cite><img src="image/hover-recruit-sub.png" alt="">recruit</cite>
+              <div>
+                  <dl>
+                  <dt>인재상</dt>
+                  <dd>인재상</dd>
+                </dl>
+                  <dl>
+                    <dt>인사제도</dt>
+                    <dd>인사원칙</dd>
+                    <dd>인재육성</dd>
+                    <dd>보상제도</dd>
+                  </dl>
+                  <dl>
+                    <dt>지원가이드</dt>
+                    <dd>채용 프로세스</dd>
+                    <dd>직무소개</dd>
+                    <dd>직무인터뷰</dd>
+                  </dl>
+                  <dl>
+                <dt>채용공고</dt>
+                <dd>사무직 채용공고</dd>
+                <dd>현장직 채용공고</dd>
+              </dl>
+              </div>
+            </div>
+            <div>
+                <cite><img src="image/etc-sub.png" alt="">ETC</cite>
+                <div>
+                  <ul>
+                    <li>
+                      <a href="#none">고객문의</a>
+                    </li>
+                    <li>
+                      <a href="#none">제품담당자</a>
+                    </li>
+                    <li>
+                      <a href="#none">개인정보 처리(취급)방침</a>
+                    </li>
+                    <li>
+                      <a href="#none">통합검색</a>
+                    </li>
+                  </ul>
+                </div>
+            </div>
+         </div>
+
+       </div>
     </nav>
 
 
@@ -44,11 +196,11 @@
 
   <div class="bg-slide pa">
        <div class="bg-slide-btn pr">
-           <a href="#none">p,s</a>
-           <a href="#none">1</a>
-           <a href="#none">2</a>
-           <a href="#none">3</a>
-           <a href="#none">4</a>
+           <a href="#none" class="sp">p,s</a>
+           <a href="#none" class="on">1</a>
+           <a href="#none" class="on">2</a>
+           <a href="#none" class="on">3</a>
+           <a href="#none" class="on">4</a>
        </div>
 
        <div class="bg-slide-view pa">
