--- a/kakao/index.html
+++ b/kakao/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="js/main.js"></script>
   <link rel="stylesheet" href="css/import.css">
@@ -28,7 +28,7 @@
               <a class="gnb-2" href="#">투자정보</a>
             </li>
             <li>
-              <a class="gnb-3" href="#">인재영입</a>
+              <a class="gnb-3" href="pages/careers.html">인재영입</a>
             </li>
             <li>
               <a class="gnb-4" href="#">새소식</a>
@@ -101,7 +101,7 @@
         </div>
         <div class="l-r">
           <div class="taxi">
-              <a href="#" >
+              <a href="pages/taxi.html" >
                    <div>
                      <img src="image/taxi.jpg" alt="카카오택시">
                     </div>
@@ -112,7 +112,7 @@
           </div>
 
           <div class="branch">
-              <a href="#" >
+              <a href="pages/brunch.html" >
                   <div>
                     <img src="image/branch.png" alt="브런치">
                   </div>
@@ -178,7 +178,7 @@
 
       <article class="right">
         <div class="career">
-            <a href="#" >
+            <a href="pages/careers.html" >
                <img src="image/career.png" alt="인재영입">
                <h2>CAREERS</h2>
                  <cite>인재영입</cite>
@@ -187,7 +187,7 @@
         </div>
 
         <div class="service">
-            <a href="#" >
+            <a href="pages/with.html" >
                <div>
                  <img src="image/together.jpg" alt="같이가자">
                 </div>
