--- a/kakao/pages/taxi.html
+++ b/kakao/pages/taxi.html
@@ -6,71 +6,78 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="js/main.js"></script>
-  <link rel="stylesheet" href="css/import.css">
+  <script src="../js/main.js"></script>
+  <link rel="stylesheet" href="../css/import.css">
   <title>taxi</title>
 </head>
-<body>
+<body id="sub-page">
 
-<header>
+  <header>
+    <nav>
+      <div class="logo">
+        <a href="#none">
+          <img src="../image/sub-page/kakao-logo.png" alt="">
+          <h1>kakao</h1>
+        </a>
+        <a href="#none">
+          <strong>서비스</strong>
+          <i></i>
+        </a>
+      </div>
 
-  <div class="logo">
-    <a href="#none">
-      <img src="" alt="">
-      <h1>kakao</h1>
-    </a>
-  </div>
 
-  <nav>
-    <ul>
-      <li>
-        <a href="#none">제휴안내</a>
-      </li>
-      <li>
-        <a href="#none">고객센터</a>
-      </li>
-    </ul>
-  </nav>
+      <ul>
+        <li>
+          <a href="#none">제휴안내</a>
+        </li>
+        <li>
+          <a href="#none">고객센터</a>
+        </li>
+      </ul>
 
-  <div>
-    <a href="#none">로그인</a>
+      <div class="right">
+        <a href="#none">로그인</a>
 
-    <select class="sel-locatuin" name="">
-      <option value="">지역선택</option>
-      <option value="">서울</option>
-      <option value="">부산</option>
-    </select>
+        <select class="sel-locatuin" name="">
+          <option value="">지역선택</option>
+          <option value="">서울</option>
+          <option value="">부산</option>
+        </select>
 
-    <select class="sel-lang" name="">
-      <option value="ko">Language(KO)</option>
-      <option value="en">Language(EN)</option>
-    </select>
+        <select class="sel-lang" name="">
+          <option value="ko">Language(KO)</option>
+          <option value="en">Language(EN)</option>
+        </select>
 
-  </div>
+      </div>
+     </nav>
 
-</header>
+  </header>
+
 
 <section id="taxi">
-  <div>
-    <img src="" alt="">
-    <h2>kakao<strong>taxi</strong></h2>
+  <div class="header">
+    <h2>kakaotaxi</h2>
+    <a href="#none"></a>
+    <a href="#none"></a>
   </div>
 
-  <div>
-    <cite>믿고 부르는 <br /><strong>카카오택시</strong></cite>
+  <div class="intro">
+    <cite>믿고 부르는 <br />카카오택시</cite>
   </div>
 
-  <div>
+  <div class="intro-1">
     <span>앱으로 <strong>간편하게 호출</strong></span>
     <p>출발지는 자동설정, 목적지만 지정하면 호출 끝! <br />택시가 필요할 땐 앱으로 호출하세요.</p>
   </div>
 
-  <div>
+  <div class="every">
     <span>전국 <strong>어디서든 OK</strong></span>
     <p>국내 최다 택시가 전국에서 대기 중!<br />어디서든 카카오택시로 부르면 택시가 옵니다.</p>
+    <i></i>
   </div>
 
-  <div>
+  <div class="every1">
     <span>마음까지 <strong>편안한 택시</strong></span>
     <p>배차된 택시정보를 미리 확인할 수 있어서 안심! <br />탑승한 택시정보를 카카오톡 친구에게 보내고 더 안심!</p>
   </div>
@@ -80,7 +87,64 @@
     <p>배차된 택시정보를 미리 확인할 수 있어서 안심! <br />탑승한 택시정보를 카카오톡 친구에게 보내고 더 안심!</p>
   </div>
 
+  <div>
+    <span>카카오택시와<strong>함께 달리세요.</strong></span>
+    <p>
+      대한민국 1등 카카오톡이 만드는 특별한 택시앱,<br />손님은 많고 이용은 무료입니다. <br />지금 바로 카카오택시 기사용 앱을 다운받고 회원 가입하세요.
+    </p>
+    <a href="#none"><strong>카카오택시 기사용</strong>다운받기</a>
+  </div>
+
 </section>
+
+<footer>
+
+  <ul>
+    <li>
+      <a href="#none">이용약관</a>
+    </li>
+    <li>
+      <a href="#none">위치기반서비스 이용약관</a>
+    </li>
+    <li>
+      <a href="#none"><strong>개인정보처리방침</strong></a>
+    </li>
+    <li>
+      <a href="#none">운영정책</a>
+    </li>
+    <li>
+      <a href="#none">청소년보호정책</a>
+    </li>
+    <li>
+      <a href="#none">권리침해신고안내</a>
+    </li>
+    <li>
+      <a href="#none">공지사항<i></i></a>
+    </li>
+    <li>
+      <a href="#none">광고</a>
+    </li>
+  </ul>
+
+  <ul>
+    <li>
+      <a href="#none">b</a>
+    </li>
+    <li>
+      <a href="#none">f</a>
+    </li>
+    <li>
+      <a href="#none">t</a>
+    </li>
+  </ul>
+
+  <div>
+    <span>Copyright ⓒ</span>
+    <a href="../index.html">Kakao Corp.</a>
+    <span> All rights reserved.</span>
+  </div>
+
+</footer>
 
 </body>
 </html>
